Up producto-categoria y reserva
Creacion de microservicio-reserva-inventario y actualizacion de microservicio-producto-categoria